deploy/k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: pulsecart
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: pulsecart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
      app.kubernetes.io/name: api-gateway
      app.kubernetes.io/part-of: pulsecart
  template:
    metadata:
      labels:
        app: api-gateway
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: pulsecart
    spec:
      containers:
        - name: api-gateway
          image: 971146591534.dkr.ecr.us-east-1.amazonaws.com/triad-app-api-gateway:api-gateway-develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
