deploy/k8s/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: pulsecart
  labels:
    app.kubernetes.io/name: notifications
    app.kubernetes.io/part-of: pulsecart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications
      app.kubernetes.io/name: notifications
      app.kubernetes.io/part-of: pulsecart
  template:
    metadata:
      labels:
        app: notifications
        app.kubernetes.io/name: notifications
        app.kubernetes.io/part-of: pulsecart
    spec:
      containers:
        - name: notifications
          image: 971146591534.dkr.ecr.us-east-1.amazonaws.com/triad-app-notifications:notifications-develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
