deploy/k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: pulsecart
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/part-of: pulsecart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
      app.kubernetes.io/name: orders
      app.kubernetes.io/part-of: pulsecart
  template:
    metadata:
      labels:
        app: orders
        app.kubernetes.io/name: orders
        app.kubernetes.io/part-of: pulsecart
    spec:
      containers:
        - name: orders
          image: 971146591534.dkr.ecr.us-east-1.amazonaws.com/triad-app-orders:orders-develop
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
