deploy/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: pulsecart
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/part-of: pulsecart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      app.kubernetes.io/name: worker
      app.kubernetes.io/part-of: pulsecart
  template:
    metadata:
      labels:
        app: worker
        app.kubernetes.io/name: worker
        app.kubernetes.io/part-of: pulsecart
    spec:
      containers:
        - name: worker
          image: 971146591534.dkr.ecr.us-east-1.amazonaws.com/triad-app-worker:worker-develop
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
