deploy/k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: pulsecart
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
