deploy/k8s/notifications-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: pulsecart
spec:
  selector:
    app: notifications
  ports:
    - name: http
      port: 8082
      targetPort: http
