deploy/k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: pulsecart
spec:
  selector:
    app: orders
  ports:
    - name: http
      port: 8081
      targetPort: http
