deploy/k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: pulsecart
spec:
  selector:
    app: worker
  ports:
    - name: metrics
      port: 9091
      targetPort: metrics
