deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulsecart
  namespace: pulsecart
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pulsecart-dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
